--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="POST">
 					{% csrf_token %}
 					<span class="login100-form-title p-b-26">
 						Welcome
@@ -60,15 +60,16 @@
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							{% for message in messages %}
-							<span style="color: red">{{message}}</span>
-							{% endfor %}
 							<button class="login100-form-btn">
 								Login
 							</button>
 						</div>
 					</div>
-
+					<div>
+						{% for message in messages %}
+						<span style="color: red; text-align: center;">{{message}}</span>
+						{% endfor %}
+					</div>
 					<div class="text-center p-t-115">
 						<span class="txt1">
 							Don’t have an account?
