--- a/templates/index.html
+++ b/templates/index.html
@@ -307,7 +307,8 @@
                 <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="bg-primary text-center p-5">
                         <h1 class="mb-4">Make Appointment</h1>
-                        <form>
+                        <form method="POST" action="">
+                            {% csrf_token %}
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
