--- a/templates/index.html
+++ b/templates/index.html
@@ -307,7 +307,7 @@
                 <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="bg-primary text-center p-5">
                         <h1 class="mb-4">Make Appointment</h1>
-                        <form method="POST" action="">
+                        <form method="POST" action="{% url 'appointment' %}">
                             {% csrf_token %}
                             <div class="row g-3">
                                 <div class="col-sm-6">
@@ -345,6 +345,9 @@
                                         <label for="message">Message</label>
                                     </div>
                                 </div>
+                                {% for message in messages %}
+                                <span style="color: black;">{{message}}</span>
+                                {% endfor %}
                                 <div class="col-12">
                                     <button class="btn btn-dark w-100 py-3" type="submit">Submit</button>
                                 </div>
