--- a/templates/contact.html
+++ b/templates/contact.html
@@ -123,31 +123,39 @@
                     <h6 class="text-primary text-uppercase mb-2">Contact Us</h6>
                     <h1 class="display-6 mb-4">If You Have Any Query, Please Contact Us</h1>
                     <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-                    <form>
+                    <form method="POST" action="">
+                        {% csrf_token %}
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0 bg-light" id="name" placeholder="Your Name">
+                                    <!-- <input type="text" class="form-control border-0 bg-light" id="name" placeholder="Your Name"> -->
+                                    {{form.name}}
                                     <label for="name">Your Name</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control border-0 bg-light" id="email" placeholder="Your Email">
+                                    <!-- <input type="email" class="form-control border-0 bg-light" id="email" placeholder="Your Email"> -->
+                                    {{form.email}}
                                     <label for="email">Your Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0 bg-light" id="subject" placeholder="Subject">
+                                    <!-- <input type="text" class="form-control border-0 bg-light" id="subject" placeholder="Subject"> -->
+                                    {{form.subject}}
                                     <label for="subject">Subject</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control border-0 bg-light" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
+                                    <!-- <textarea class="form-control border-0 bg-light" placeholder="Leave a message here" id="message" style="height: 150px"></textarea> -->
+                                    {{form.message}}
                                     <label for="message">Message</label>
                                 </div>
+                                {% for message in messages %}
+                                <span>{{message}}</span>
+                                {% endfor %}
                             </div>
                             <div class="col-12">
                                 <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
