--- a/templates/contact.html
+++ b/templates/contact.html
@@ -154,7 +154,7 @@
                                     <label for="message">Message</label>
                                 </div>
                                 {% for message in messages %}
-                                <span>{{message}}</span>
+                                <span style="color: yellow;">{{message}}</span>
                                 {% endfor %}
                             </div>
                             <div class="col-12">
